name:               dawg
version:            0.1.0
synopsis:           DAWG
description:
    Directed acyclic word graphs.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing ???????
homepage:           https://github.com/kawu/dawg
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5
      , containers
      , binary
      , vector
      , vector-binary
      , hashable

    exposed-modules:
        Data.DAWG.Unboxed
      , Data.Trie.Unboxed

    ghc-options: -Wall

source-repository head
    type: git
    location: git://github.com/kawu/dawg.git
